[package]
name = "content_creators"
version = "0.1.0"
authors = ["Hyde46 <denis.heid@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsreddit = "0.1.3"
#rsreddit = { path = "../reddit_api"}
iced = { path = "../iced", features = ["tokio"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0"
iced_native = { path = "../iced/native" }
iced_futures = { path = "../iced/futures" }
reqwest = "0.10"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories = "2.0"
